#1372: Error endpoint implementation (#28)
* Add error endpoint

* Resolve audit issues

* Add unit tests

* Update endpoint description. Make id caps.

* Fix bug with endpoint handler path
